src/objects/BGBK__FinancialObjects__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Specifies parents for Fees as well as Account and Contact for Cart and Transactions. Object name goes in the Name field.</description>
    <fields>
        <fullName>BGBK__Account_Field_Name__c</fullName>
        <description>The field API name for the account lookup (e.g. MUSW__Account__c) to define the responsible party (account).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The field API for Account lookup (e.g. MUSW__Account__c)</inlineHelpText>
        <label>Account Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Contact_Field_Name__c</fullName>
        <description>The field API name for the contact lookup (e.g. MUSW__Applicant__c) to define responsible party (contact).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The field API for Contact lookup (e.g. MUSW__Applicant__c)</inlineHelpText>
        <label>Contact Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Responsible_Party_Type_Field__c</fullName>
        <description>The picklist field API name for the responsible party types: account or contact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The picklist field API Name for Responsible Party types</inlineHelpText>
        <label>Responsible Party Type Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Financial Objects</label>
</CustomObject>